--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -45,7 +45,7 @@
         android:gravity="center_horizontal" >
 
         <Button
-            android:id="@+id/Button01"
+            android:id="@+id/main_minor_wound_dressed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Minor Wound Dressed"
