--- a/res/layout/refused.xml
+++ b/res/layout/refused.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Seen by"
+                android:text="Patient Refused Treatment"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#ffffff"
                 android:textSize="32dp"
@@ -26,28 +26,7 @@
                 android:typeface="normal" />
         </TableRow>
 
-        <TableRow
-            android:id="@+id/tableRow13"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Print name"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-           <EditText
-                android:id="@+id/sign_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName" >
-
-            
-            </EditText>
-        </TableRow>
+      
 
         <TableRow
             android:id="@+id/tableRow14"
@@ -64,12 +43,12 @@
     </TableLayout>
 
     <uk.co.section9.emfmedical.DrawingView
-        android:id="@+id/sign_signature"
+        android:id="@+id/refused_signature"
         android:layout_width="375dp"
         android:layout_height="256dp" />
 
     <Button
-        android:id="@+id/signature_complete_form"
+        android:id="@+id/refused_complete_form"
         android:layout_width="wrap_content"
         android:layout_height="132dp"
         android:text="Finish Report Form"
