--- a/res/layout/refused.xml
+++ b/res/layout/refused.xml
@@ -37,7 +37,9 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign below"
+                android:text="Patient needs to Sign below:"
+                android:textSize="24dp"
+                android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
         </TableRow>
     </TableLayout>
