--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -22,7 +22,7 @@
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="EMF Camp First Aid 2014\nPatient Report System"
+            android:text="EMF Camp First Aid 2016\nPatient Report System"
             android:layout_toRightOf="@+id/imageView1"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="32sp" />
@@ -58,34 +58,14 @@
             android:text="Minor Wound Dressed"
              android:paddingBottom="20dp"
             android:textSize="32sp" />
-    </RelativeLayout>
 
-     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal" >
-    <AnalogClock
-        android:id="@+id/analogClock1"
-        android:layout_width="wrap_content"
-         android:layout_marginTop="30dp"
-        android:layout_height="wrap_content" />
-    
-    <DigitalClock
-        android:id="@+id/digitalClock1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:textSize="32sp"
-         android:layout_marginLeft="20dp"
-        android:layout_below="@+id/analogClock1"
-        android:textStyle="bold"
-         android:layout_marginBottom="50dp"/>
     
         <TextView
             android:id="@+id/textView22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Benjamin Blundell\nsection9.co.uk"
-            android:layout_below="@+id/digitalClock1"
+            android:layout_below="@+id/main_minor_wound_dressed"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="18sp" />
     
